delete missing dependency

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,14 @@
-    LOCAL_PORT = "8000"
-    PORT = "ff"
+LOCAL_PORT = "8000"
+DB_HOST = "sql6.freesqldatabase.com"
+DB_NAME = "sql6642295"
+DB_USERNAME = "sql6642295"
+PASSWORD = "nuePZwL1jD"
+DB_PORT = "3306"
+BASE_URL = "sql6.freesqldatabase.com" || "http://localhost:8000"
+
+
+# Host: sql6.freesqldatabase.com
+# Database name: sql6642295 
+# Database user: sql6642295
+# Database password: nuePZwL1jD
+# Port number: 3306
